variable parameter send

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -67,8 +67,8 @@ all: main-build
 main-build: STM32VET6_DEMO.elf secondary-outputs
 
 # Tool invocations
-STM32VET6_DEMO.elf STM32VET6_DEMO.map: $(OBJS) $(USER_OBJS) E:\Document\STM32CubeIDE\STM32VET6_DEMO\STM32F407VETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "STM32VET6_DEMO.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\Document\STM32CubeIDE\STM32VET6_DEMO\STM32F407VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32VET6_DEMO.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+STM32VET6_DEMO.elf STM32VET6_DEMO.map: $(OBJS) $(USER_OBJS) E:\工作\STM32VET6_DEMO\STM32F407VETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "STM32VET6_DEMO.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\工作\STM32VET6_DEMO\STM32F407VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32VET6_DEMO.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
